# jdTextEdit

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  AutocompleteXML.py  BuildBackend.py  Enviroment.py  Functions.py  LICENSE  LexerList.py  MANIFEST.in  README.md  Settings.py  SharedEnviroment.py  TranslationHelper.py  Updater.py  build_exe.py  install.py  jdTextEdit.py  logo_gimp.xcf  pyproject.toml  requirements.txt  setup.py  updateTranslations.py
.github/: pull_request_template.md
.github/workflows/: close.yml
.run/: jdTextEdit.run.xml
.woodpecker/: check-data-files.yaml  freedesktop-check.yaml  pypi-deploy.yaml  sourceforge-deploy.yaml
deploy/: Installer.nsi  com.gitlab.JakobDev.jdTextEdit.desktop  com.gitlab.JakobDev.jdTextEdit.metainfo.xml  com.gitlab.JakobDev.jdTextEdit.service  page.codeberg.JakobDev.jdTextEdit.desktop  page.codeberg.JakobDev.jdTextEdit.metainfo.xml  page.codeberg.JakobDev.jdTextEdit.service  sourceforge.py
deploy/translations/: AppStream.its  LINGUAS  de.po  messages.pot  nl.po  sq.po
doc/source/: conf.py  index.rst
doc/source/Distribution/: DefaultData.rst  GlobalCommandsMacros.rst  distribution.json.rst  index.rst
doc/source/General/: CommandlineArguments.rst  EnvironmentVariables.rst  index.rst  userChrome.css.rst
doc/source/GettingInvolved/: Translate.rst  index.rst
doc/source/PluginDevelopment/: AddLanguage.rst  ApplicationSignals.rst  EditorSignals.rst  GettingStarted.rst  MainWindowSignals.rst  PluginAPI.rst  TabWidgetSignals.rst  index.rst
gui/: AboutWindow.py  CloseSaveWindow.py  CodeEdit.py  DateTimeWindow.py  DayTipWindow.py  DockWidget.py  DocumentStatistics.py  EditCommandsWindow.py  EditTabWidget.py  ExecuteCommandWindow.py  GotoLineWindow.py  MainWindow.py  SearchAndReplaceWindow.py  SearchWindow.py  SettingsWindow.py
gui/SettingsTabs/: AutocompletionTab.py  ContextMenuTab.py  EditorTab.py  GeneralTab.py  PluginTab.py  ShortcutTab.py  StyleTab.py  ToolbarTab.py
gui/SidebarWidgets/: CharacterMapWidget.py  ClipboardWidget.py  FileTreeWidget.py  NotesWidget.py  TabListWidget.py
jdTextEdit/: AutocompleteXML.py  Constants.py  EncodingList.py  Enviroment.py  Environment.py  Functions.py  Languages.py  LexerList.py  Settings.py  Updater.py  __main__.py  jdTextEdit.py
jdTextEdit/api/: LanguageBase.py  SettingsTabBase.py  SidebarWidgetBase.py  SignalBase.py  StatusBarWidgetBase.py  ThemeBase.py  Types.py
jdTextEdit/core/: BuiltinLanguage.py  DefaultTheme.py  FileTheme.py  Logger.py  PluginLoader.py  Project.py
jdTextEdit/core/api/: ApplicationSignals.py  EditorSignals.py  MainWindowSignals.py  PluginAPI.py  ProjectSignals.py  TabWidgetSignals.py
jdTextEdit/data/: changelog.html  translators.json
jdTextEdit/gui/: AboutWindow.py  ActionSearchWindow.py  AddProjectWindow.py  CloseSaveWindow.py  CodeEdit.py  DateTimeWindow.py  DayTipWindow.py  DebugInfoWindow.py  DockWidget.py  DocumentStatistics.py  EditCommandsWindow.py  EditContainer.py  EditTabWidget.py  ExecuteCommandWindow.py  GotoLineWindow.py  MainWindow.py  ManageMacrosWindow.py  ManageTemplatesWindow.py  SearchAndReplaceWindow.py  SearchBar.py  SearchWindow.py  SettingsWindow.py  SplitViewWidget.py
jdTextEdit/gui/BannerWidgets/: BigFileBanner.py  EditorconfigBanner.py  FileChangedBanner.py  FileDeletedBanner.py  SimpleMessageBanner.py  WrongEncodingBanner.py  WrongEolBanner.py
jdTextEdit/gui/SettingsTabs/: AutocompletionTab.py  BigFilesTab.py  ContextMenuTab.py  EditorTab.py  EditorconfigTab.py  GeneralTab.py  InterfaceTab.py  OpenTab.py  PathsTab.py  PluginTab.py  SaveTab.py  ShortcutTab.py  StatusBarTab.py  StyleTab.py  TabBarTab.py  TerminalEmulatorTab.py  ToolbarTab.py
jdTextEdit/gui/SidebarWidgets/: CharacterMapWidget.py  ClipboardWidget.py  FileTreeWidget.py  NotesWidget.py  ProjectWidget.py  TabListWidget.py
jdTextEdit/gui/StatusBarWidgets/: CursorPosWidget.py  EncodingWidget.py  EolWidget.py  LanguageWidget.py  LengthWidget.py  PathWidget.py  __init__.py
jdTextEdit/gui/Widgets/: ColorButton.py  ListSelectWidget.py  ListWidgetLayout.py  TextListWidget.py
jdTextEdit/gui/Windows/: ExportDataWindow.py  LanguageOverwritesWindow.py
jdTextEdit/i18n/: jdTextEdit_de.ts  jdTextEdit_de_DE.ts
jdTextEdit/plugins/DBus/: __init__.py  interface.xml  manifest.json
jdTextEdit/plugins/Pluginmanager/: PluginManagerWindow.py  (+2 more)
jdTextEdit/templates/: BasicSite.html  HelloWorld.cpp  PyQt.py  jdTextEditPlugin.py
jdTextEdit/translation/: de.lang  de_DE.lang  en.lang  en_GB.lang
jdTextEdit/translations/: jdTextEdit_de.ts  jdTextEdit_nl.ts  jdTextEdit_pl.ts  jdTextEdit_sq.ts
plugins/pluginmanager/: PluginManagerWindow.py  __init__.py
snap/: snapcraft.yaml
snap/gui/: jdtextedit.desktop
templates/: HelloWorld.java  jdTextEditPlugin.py
tools/: BuildTranslations.py  CheckDataFiles.py  UpdateTranslations.py  UpdateTranslators.py  UpdateUnixDataTranslations.py  WriteChangelogHtml.py
translation/: de.lang  de_DE.lang  en.lang  en_GB.lang
(+32 files in other folders)
