[build-system]
requires = ["setuptools", "PyQt6", "wheel"]
build-backend = "BuildBackend"
backend-path = ["."]


[project]
name = "jdTextEdit"
description = "An advanced text editor"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["JakobDev", "QScintilla", "PyQt", "PyQt6", "Editor", "Texteditor", "Macro"]
license = "GPL-3.0-only"
authors = [
  { name = "JakobDev", email = "jakobdev@gmx.de" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Environment :: Other Environment",
  "Environment :: X11 Applications :: Qt",
  "Natural Language :: English",
  "Natural Language :: German",
  "Topic :: Text Editors",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "PyQt6",
  "PyQt6-QScintilla",
  "chardet",
  "requests",
  "jdTranslationHelper",
  "EditorConfig",
  "pyenchant",
  "lxml"
]
dynamic = ["version"]

[project.optional-dependencies]
use-cchardet = ["cchardet"]
use-charset-normalizer= ["charset_normalizer"]

[project.urls]
Issues = "https://codeberg.org/JakobDev/jdTextEdit/issues"
Source = "https://codeberg.org/JakobDev/jdTextEdit"
Documentation = "https://jdtextedit.readthedocs.io"
Donation = "https://ko-fi.com/jakobdev"

[project.gui-scripts]
jdTextEdit = "jdTextEdit.jdTextEdit:main"

[tool.setuptools.dynamic]
version = { file = "jdTextEdit/version.txt" }

[tool.setuptools.package-dir]
jdTextEdit = "jdTextEdit"

[tool.pyproject-appimage]
script = "jdTextEdit"
output = "jdTextEdit.AppImage"
icon = "jdTextEdit/Logo.svg"
rename-icon = "page.codeberg.JakobDev.jdTextEdit.svg"
desktop-entry = "deploy/page.codeberg.JakobDev.jdTextEdit.desktop"
gettext-desktop-entry = true
appstream = "deploy/page.codeberg.JakobDev.jdTextEdit.metainfo.xml"
gettext-appstream = true
gettext-directory = "deploy/translations"
python-version = "3.13"
